{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 13,
  "lineage": "babfcf6a-a494-2851-5490-d4e214906256",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dev-demo-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkInterfaces/dev-demo-nic",
            "internal_domain_name_suffix": "h3mjftjhgpiuhe2opzxadndeqd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/publicIPAddresses/dev-demo-public-ip",
                "subnet_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet/subnets/dev-demo-subnet"
              }
            ],
            "location": "eastus",
            "name": "dev-demo-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-demo-resource-group"
          },
          "dependencies": [
            "azurerm_network_security_group.dev-demo-nsg",
            "azurerm_public_ip.dev-demo-public-ip",
            "azurerm_resource_group.dev-demo-resource-group",
            "azurerm_subnet.dev-demo-subnet",
            "azurerm_virtual_network.dev-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "dev-demo-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkInterfaces/dev-demo-nic|/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkSecurityGroups/dev-demo-nsg",
            "network_interface_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkInterfaces/dev-demo-nic",
            "network_security_group_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkSecurityGroups/dev-demo-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.dev-demo-nic",
            "azurerm_network_security_group.dev-demo-nsg",
            "azurerm_public_ip.dev-demo-public-ip",
            "azurerm_resource_group.dev-demo-resource-group",
            "azurerm_subnet.dev-demo-subnet",
            "azurerm_virtual_network.dev-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev-demo-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/networkSecurityGroups/dev-demo-nsg",
            "location": "eastus",
            "name": "dev-demo-nsg",
            "resource_group_name": "dev-demo-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dev-demo-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/publicIPAddresses/dev-demo-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.170.236.64",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-demo-public-ip",
            "resource_group_name": "dev-demo-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "dev-demo-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/routeTables/dev-demo-route-table",
            "location": "eastus",
            "name": "dev-demo-route-table",
            "resource_group_name": "dev-demo-resource-group",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev-demo-private-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet/subnets/dev-demo-private-ip",
            "name": "dev-demo-private-ip",
            "resource_group_name": "dev-demo-resource-group",
            "virtual_network_name": "dev-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group",
            "azurerm_virtual_network.dev-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev-demo-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet/subnets/dev-demo-subnet",
            "name": "dev-demo-subnet",
            "resource_group_name": "dev-demo-resource-group",
            "virtual_network_name": "dev-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group",
            "azurerm_virtual_network.dev-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "dev-demo-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet/subnets/dev-demo-subnet",
            "route_table_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/routeTables/dev-demo-route-table",
            "subnet_id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet/subnets/dev-demo-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group",
            "azurerm_route_table.dev-demo-route-table",
            "azurerm_subnet.dev-demo-subnet",
            "azurerm_virtual_network.dev-demo-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dev-demo-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cd92583f-3327-43d1-938e-7e6e01b46483",
            "id": "/subscriptions/aab300ef-5c07-4cc8-a9df-951c157bb99d/resourceGroups/dev-demo-resource-group/providers/Microsoft.Network/virtualNetworks/dev-demo-vnet",
            "location": "eastus",
            "name": "dev-demo-vnet",
            "resource_group_name": "dev-demo-resource-group"
          },
          "dependencies": [
            "azurerm_resource_group.dev-demo-resource-group"
          ]
        }
      ]
    }
  ]
}